deploy/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8si-system
