deploy/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8si-ui
  namespace: k8si
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8si-ui
  template:
    metadata:
      labels:
        app: k8si-ui
    spec:
      serviceAccountName: k8si-ui
      containers:
        - name: ui
          image: docker.hoeve.nu/k8si-ui:v0.4.2
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: k8si-ui
  namespace: k8si
spec:
  type: NodePort
  selector:
    app: k8si-ui
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
